<resources>
    <string name="app_name">AA1_Mobile</string>
    <string name="app_title">LifeCare</string>
    <string name="logotipo">Logotipo</string>
    <string name="title_activity_agendamento">Agendamento</string>
    <string name="Person">Botão para consultas</string>
    <string name="especialidade_pediatra">Pediatra</string>
    <string name="especialidade_cardiologista">Cardiologista</string>
    <string name="especialidade_oftalmologista">Oftalmologista</string>
    <string name="especialidade_otorrinolaringologista">Otorrinolaringologista</string>
    <!-- Adicione as outras especialidades aqui -->

    <!-- Adicione as outras especialidades aqui -->


    <string name="profissionalButton">Botao do profissional</string>
    <string name="loading">Carregando</string>
    <string name="bookButton">Agendar</string>
    <string name="dateButton">Escolher data</string>
    <string name="timeButton">Escolhar horário</string>
    <string name="dateText">Data</string>
    <string name="timeText">Horário</string>
    <string name="ImgProfissional">Imagem do profissional</string>
    <string name="textView">Profissionais disponíveis</string>
    <string name="deleteButton">Cancelar</string>
    <string name="deleteAllButton">Deletar Tudo</string>
    <string name="SuasConsultas">Suas Consultas</string>

    <string name="titleAgendamnento">Agendamento</string>
    <string name="dataTitle">Data</string>
    <string name="timeTitle">Horário</string>
    <string name="btnConfirmar">Confirmar</string>

</resources>